# b64cpp

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_install.sh  test.sh
include/b64cpp/: b64cpp.hpp
src/: b64cpp.cpp
tests/: test_b64cpp.cpp
